; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_init.c___lpfc_sli4_release_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_init.c___lpfc_sli4_release_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lpfc_queue = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lpfc_queue**)* @__lpfc_sli4_release_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__lpfc_sli4_release_queue(%struct.lpfc_queue** %0) #0 {
  %2 = alloca %struct.lpfc_queue**, align 8
  store %struct.lpfc_queue** %0, %struct.lpfc_queue*** %2, align 8
  %3 = load %struct.lpfc_queue**, %struct.lpfc_queue*** %2, align 8
  %4 = load %struct.lpfc_queue*, %struct.lpfc_queue** %3, align 8
  %5 = icmp ne %struct.lpfc_queue* %4, null
  br i1 %5, label %6, label %11

6:                                                ; preds = %1
  %7 = load %struct.lpfc_queue**, %struct.lpfc_queue*** %2, align 8
  %8 = load %struct.lpfc_queue*, %struct.lpfc_queue** %7, align 8
  %9 = call i32 @lpfc_sli4_queue_free(%struct.lpfc_queue* %8)
  %10 = load %struct.lpfc_queue**, %struct.lpfc_queue*** %2, align 8
  store %struct.lpfc_queue* null, %struct.lpfc_queue** %10, align 8
  br label %11

11:                                               ; preds = %6, %1
  ret void
}

declare dso_local i32 @lpfc_sli4_queue_free(%struct.lpfc_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
